--- a/index.css
+++ b/index.css
@@ -1,9 +1,35 @@
+img{
+  margin-top:40px;
+  margin-left:8px;
+  margin-right:8px;
+}
+main{
+  width:850px;
+  margin-left:auto; 
+  margin-right:auto;
+  margin-bottom:35px;
+  margin-top:35px;
+}
+nav{
+  background-color: #00A6B3;
+  padding-bottom:20px; 
+  padding-top:20px;cc
+}
+header{
+    background-color:  #F15B31;
+    padding-top:30px;
+    padding-bottom:30px;
+    padding-left:20px;
+    padding-right:20px;
+}
 body {
-    text-align: center;
+    text-align: center; 
+    margin: 0;
 }
 h1 {
     font-family: "Raleway", sans-serif;
     font-weight: 400;
+    color: white;
 }
 
 p {
@@ -21,11 +47,13 @@ p {
 }
 a{
 	font-family: "Raleway", sans-serif;
-	color: #F15B31;
+	color: white ;
 	letter-spacing: 1px;
 	font-weight: 600px;
 	font-size: 18px;
 	text-decoration: none;
+  margin-left:20px;
+  margin-right:20px;
 }
 h2{
 	font-family: "Raleway", sans-serif;
@@ -33,4 +61,32 @@ h2{
 	letter-spacing: 1px;
 	font-weight: 600;
 	font-size: 20px;
+}
+footer{
+  text-transform: uppercase;
+  padding-left: 20px;
+  padding-right: 20px
+  color: white;
+  background-color: #0D2C40;
+  font-size: 10px;
+  letter-spacing: .08em;
+  font-weight: 500;
+}
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
+}
+.Copyright{
+  float: left;
+}
+.massage{
+  float: right;
+}
+.name{
+  color: #F15B31;
+  font-weight: 700;
 }
